--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -199,8 +199,8 @@
                         <div class="col-md-6">
                             <h6><i class="bi bi-info-circle me-2"></i>Client Services</h6>
                             <ul class="list-unstyled">
-                                <li><i class="bi bi-telephone me-2"></i> Support: +254 700 123 789</li>
-                                <li><i class="bi bi-envelope me-2"></i> Email: clients@example.com</li>
+                                <li><i class="bi bi-telephone me-2"></i> Support: +254 757 790 687</li>
+                                <li><i class="bi bi-envelope me-2"></i> Email: clients@nairobijets.com</li>
                                 <li><i class="bi bi-database me-2"></i> Total Clients: {{ page_obj.paginator.count }}</li>
                             </ul>
                         </div>
