new updates on booking list view and templates

--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -230,8 +230,8 @@
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content border-0 shadow">
             <div class="modal-header bg-jet-primary text-white">
-                <h5 class="modal-title" id="clientDetailModalLabel">Client Details</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 style="color:white;" class="modal-title" id="clientDetailModalLabel">Client Details</h5>
+                <button style="color:white;" type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="row">
